\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 3.8}{

Mostly bug fixes
   \itemize{
     \item{Rollover bugfixes from Release branch}
     \item{Re-normalize after applying black/greylists}
     \item{Apply Rhtslib patch}
     \item{Update vignette}
     \item{Remove contact info for Gord}
  }
}

\section{Version 3.6}{

Mostly bug fixes, defaults for spike-in normalization.

\itemize{
 \item{Change default spike-in normalization to NATIVE (TLE/TMM)}
 \item{Change spike-in normalization to use reference library sizes}
 \item{Fix bug involving Called columns in reports}
 \item{Maintain FRiP calculations}
 \item{Improve dba.plotProfile sample labels}
 \item{Fix issue with package:parallel}
 \item{Fix error/warning in dba.blacklist relating to non-matching 
 chromosome names}
 \item{Update man page for dba.report to clarify how fold changes are 
 reported when bNormalized=FALSE.}
 \item{Add some new test conditions to GenerateDataFiles.R}
}
}

\section{Version 3.4}{
\itemize{
 \item{Fix bFlip issues}
 \item{Fix bug where mode not passed to summarizeOverlaps}
 \item{Add $inter.feature config parameter}
 \item{Re-compute FDR when fold change other than 0 is specified}
 \item{Remove most gc() calls for performance}
}
}


\section{Version 3.2}{
\itemize{
 \item{New type of plot: dba.plotProfile()}
 \item{Can mix single-end and paired-end bam files}
 \item{Various bug fixes}
}
}

\section{Version 3.0}{
\itemize{
\item{
This is a major release of DiffBind and the new version will be 3.0.

The main upgrade involves how the modelling and normalization are done. 
DiffBind now supports models and contrasts of arbitrary complexity 
using either/both DESeq2 or/and edgeR,
as well as a myriad of normalization options.

NB:

The previous methods for modelling are maintained for backward compatibility, 
however they are not the default. 
To repeat earlier analyses, dba.contrast() must be 
called explicitly with design=FALSE.